tests/snapshots/yaml_suite_snapshots__yaml_suite_CPZ3_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Doublequoted scalar starting with a tab
  from: "@perlpunk"
  tags: double scalar
  yaml: "---\ntab: \"\\tstring\"\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :tab\n   =VAL \"\\tstring\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"tab\": \"\\tstring\"\n}\n"
  dump: "---\ntab: \"\\tstring\"\n"
