tests/snapshots/yaml_suite_snapshots__yaml_suite_CPZ3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\ntab: \"\\tstring\"\n"
  from: "@perlpunk"
  json: "{\n  \"tab\": \"\\tstring\"\n}\n"
  name: Doublequoted scalar starting with a tab
  tags: double scalar
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :tab\n   =VAL \"\\tstring\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\ntab: \"\\tstring\"\n"
