tests/snapshots/yaml_suite_snapshots__yaml_suite_CQ3W_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Double quoted string without closing quote
  from: "@perlpunk"
  tags: error double
  fail: true
  yaml: "---\nkey: \"missing closing quote\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n"
