tests/snapshots/yaml_suite_snapshots__yaml_suite_CQ3W_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Double quoted string without closing quote
  tags: error double
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n"
  yaml: "---\nkey: \"missing closing quote\n"
