tests/snapshots/yaml_suite_snapshots__yaml_suite_CT4Q_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 7.20. Single Pair Explicit Entry
  from: "http://www.yaml.org/spec/1.2/spec.html#id2792424"
  tags: explicit-key spec flow mapping
  yaml: "[\n? foo\n bar : baz\n]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   +MAP {}\n    =VAL :foo bar\n    =VAL :baz\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"foo bar\": \"baz\"\n  }\n]\n"
  dump: "- foo bar: baz\n"
