tests/snapshots/yaml_suite_snapshots__yaml_suite_CT4Q_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- foo bar: baz\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2792424"
  json: "[\n  {\n    \"foo bar\": \"baz\"\n  }\n]\n"
  name: Spec Example 7.20. Single Pair Explicit Entry
  tags: explicit-key spec flow mapping
  tree: "+STR\n +DOC\n  +SEQ []\n   +MAP {}\n    =VAL :foo bar\n    =VAL :baz\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "[\n? foo\n bar : baz\n]\n"
