tests/snapshots/yaml_suite_snapshots__yaml_suite_CTN5_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Flow sequence with invalid extra comma
  from: "@perlpunk"
  tags: error flow sequence
  fail: true
  yaml: "---\n[ a, b, c, , ]\n"
  tree: "+STR\n +DOC ---\n  +SEQ []\n   =VAL :a\n   =VAL :b\n   =VAL :c\n"
