tests/snapshots/yaml_suite_snapshots__yaml_suite_CTN5_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Flow sequence with invalid extra comma
  tags: error flow sequence
  tree: "+STR\n +DOC ---\n  +SEQ []\n   =VAL :a\n   =VAL :b\n   =VAL :c\n"
  yaml: "---\n[ a, b, c, , ]\n"
